--- a/FishingTweaks.csproj
+++ b/FishingTweaks.csproj
@@ -7,8 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.3.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="AutoFishing2">
+            <HintPath>D:\Games\SteamLibrary\steamapps\common\Stardew Valley\mymods\AutoFishing2\AutoFishing2.dll</HintPath>
+        </Reference>
     </ItemGroup>
 
 </Project>
