--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
   "UniqueID": "TWT233.FishingTweaks",
   "EntryDll": "FishingTweaks.dll",
   "MinimumApiVersion": "4.0.0",
-  "UpdateKeys": []
+  "UpdateKeys": ["Nexus:33094"]
 }
